Fix problem with on screen keyboard on mobile

--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ html,
 body {
   height: 100%;
   scroll-behavior: smooth;
-  scroll-padding: 104px;
+  scroll-padding: 90px;
   scrollbar-color: var(--main-color-600) var(--main-color-200);
   scrollbar-width: thin;
 }
@@ -749,7 +749,6 @@ section {
 /************************************* MAIN HERO *****************************************************/
 
 .main-hero {
-  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1262,7 +1261,6 @@ footer a:focus {
   color: var(--main-accent);
   animation: jello-horizontal 0.9s forwards;
 }
-
 
 /* ----------------------------------------------
    * Generated by Animista on 2021-11-19 14:43:14
